--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=SNM-C
 spring.h2.console.enabled=true
 spring.datasource.url=jdbc:h2:mem:notifdb
 spring.datasource.driverClassName=org.h2.Driver
-#spring.datasource.username=
-#spring.datasource.password=
+spring.datasource.username=sa
+spring.datasource.password=123
 
 spring.jpa.show-sql=true
